# fhe

./: .gitignore  BENCHMARKS.md  BENCHMARKS_CPU_binfhe.txt  BENCHMARKS_CPU_lib.txt  BENCHMARKS_CPU_microbench.txt  BENCHMARKS_CPU_poly.txt  BENCHMARKS_METAL_NTT.txt  BENCHMARKS_MLX_binfhe.txt  BENCHMARKS_MLX_lib.txt  BENCHMARKS_MLX_microbench.txt  BENCHMARKS_MLX_poly.txt  CMakeLists.txt  COVERAGE.md  LICENSE  LLM.md  README.md
benchmark/openfhe/: CMakeLists.txt  binfhe_bench.cpp  ckks_bench.cpp  pke_bench.cpp
server/: CMakeLists.txt  fhe_controller.h  main.cc  test.sh
src/binfhe/: CMakeLists.txt
src/binfhe/examples/: boolean-ap.cpp  boolean-lmkcdey.cpp  boolean-multi-input.cpp  boolean-serial-binary-dynamic-large-precision.cpp  boolean-serial-binary.cpp  boolean-serial-json-dynamic-large-precision.cpp  boolean-serial-json.cpp  boolean-truth-tables.cpp  boolean.cpp  eval-decomp.cpp  eval-flooring.cpp  eval-function.cpp  eval-sign.cpp
src/binfhe/examples/pke/: boolean-ap-pke.cpp  boolean-pke.cpp  boolean-serial-binary-pke.cpp  boolean-serial-json-pke.cpp  boolean-truth-tables-pke.cpp  eval-flooring-pke.cpp  eval-function-pke.cpp
src/binfhe/include/: binfhe-base-params.h  binfhe-base-scheme.h  binfhe-constants.h  binfhecontext-ser.h  binfhecontext.h  lwe-ciphertext-fwd.h  lwe-ciphertext.h  lwe-cryptoparameters.h  lwe-keypair-fwd.h  lwe-keypair.h  lwe-keyswitchkey-fwd.h  lwe-keyswitchkey.h  lwe-pke.h  lwe-privatekey-fwd.h  lwe-privatekey.h  lwe-publickey-fwd.h  lwe-publickey.h  rgsw-acc-cggi.h  rgsw-acc-dm.h  rgsw-acc-lmkcdey.h  rgsw-acc.h  rgsw-acckey.h  rgsw-cryptoparameters.h  rgsw-evalkey.h  rlwe-ciphertext.h
src/binfhe/include/backend/: backend.h  bsk_prefetch.h  packed.h
src/binfhe/include/batch/: binfhe-batch.h
src/binfhe/include/fhevm/: fhevm.h
src/binfhe/include/radix/: comparison_luts.h  lazy_carry.h  radix.h  shortint.h
src/binfhe/include/security/: constant_time.h  timing_guard.h
src/binfhe/include/threshold/: batch_gpu_layout.h  batch_threshold.h  transcript.h
src/binfhe/include/zkp/: fhe_witness.h
src/binfhe/lib/: binfhe-base-scheme.cpp  binfhe-constants-impl.cpp  binfhecontext.cpp  lwe-pke.cpp  rgsw-acc-cggi.cpp  rgsw-acc-dm.cpp  rgsw-acc-lmkcdey.cpp  rgsw-acc.cpp  rgsw-cryptoparameters.cpp
src/binfhe/lib/backend/: backend.cpp  packed.cpp
src/binfhe/lib/backend/_wip/: bsk_prefetch.cpp  bsk_prefetch_metal.cpp
src/binfhe/lib/backend/metal/: tfhe_uint128.h
src/binfhe/lib/batch/: batch.cpp
src/binfhe/lib/fhevm/: fhevm.cpp
src/binfhe/lib/radix/: radix.cpp  shortint.cpp
src/binfhe/lib/security/: constant_time.cpp
src/binfhe/lib/threshold/: batch_gpu_layout.cpp  batch_threshold.cpp  transcript.cpp
src/binfhe/lib/zkp/: fhe_witness.cpp
src/binfhe/unittest/: UnitTestConstantTime.cpp  UnitTestFHEW.cpp  UnitTestFHEWDeep.cpp  UnitTestFHEWExtended.cpp  UnitTestFHEWPKE.cpp  UnitTestFHEWPKESerial.cpp  UnitTestFHEWSerial.cpp  UnitTestFunc.cpp  evm_functional_tests.cpp  perf_benchmarks.cpp
src/core/: CMakeLists.txt
src/core/examples/: external-prng.cpp  parallel.cpp  sampling.cpp
src/core/extras/: dft.cpp  math.cpp  ntt1.cpp  ntt2.cpp
src/core/include/: version.h
src/core/include/lattice/: constants-lattice.h  dgsampling-impl.h  dgsampling.h  field2n-impl.h  field2n.h  ilelement.h  lat-hal.h  matrix-lattice-impl.h  stdlatticeparms.h  trapdoor-impl.h  trapdoor.h  trapdoorparameters.h
src/core/include/lattice/hal/: dcrtpoly-interface.h  elemparams.h  lat-backend.h  poly-interface.h
src/core/include/lattice/hal/default/: dcrtpoly-impl.h  dcrtpoly.h  ildcrtparams.h  ilparams.h  poly-impl.h  poly.h
src/core/include/math/: binaryuniformgenerator-impl.h  binaryuniformgenerator.h  chebyshev.h  dftransform.h  discretegaussiangenerator-impl.h  discretegaussiangenerator.h  discretegaussiangeneratorgeneric.h  discreteuniformgenerator-impl.h  discreteuniformgenerator.h  distrgen.h  distributiongenerator.h  hermite.h  math-hal.h  matrix-impl.h  matrix.h  matrixstrassen-impl.h  matrixstrassen.h  nbtheory-impl.h  nbtheory.h  ternaryuniformgenerator-impl.h  ternaryuniformgenerator.h
src/core/include/math/hal/: integer.h  nativeintbackend.h  transform.h  vector.h
src/core/include/math/hal/bigintdyn/: mubintvecdyn.h  transformdyn-impl.h  transformdyn.h  ubintdyn.h
src/core/include/math/hal/bigintfxd/: mubintvecfxd.h  transformfxd-impl.h  transformfxd.h  ubintfxd.h
src/core/include/math/hal/bigintntl/: mubintvecntl.h  transformntl-impl.h  transformntl.h  ubintntl.h
src/core/include/math/hal/cuda/: gpu_tfhe_cuda.h
src/core/include/math/hal/intnat/: mubintvecnat.h  transformnat-impl.h  transformnat.h  ubintnat.h
src/core/include/math/hal/mlx/: async_pipeline.h  barrett_metal.h  benchmark_suite.h  blind_rotate.h  bsk_prefetch.h  euint256.h  euint256_pbs_integration.h  external_product_fused.h  fhe.h  four_step_ntt.h  gpu_tfhe.h  (+17 more)
src/core/include/utils/: debug.h  exception.h  hashutil.h  inttypes.h  memory.h  openfhebase64.h  parallel.h  serial.h  serializable.h  sertype.h  utilities-int.h  utilities.h
src/core/lib/lattice/: constants-lattice-impl.cpp  lattice.cpp  stdlatticeparms.cpp  trapdoor-dcrtpoly.cpp  trapdoor-poly.cpp
src/core/lib/math/: chebyshev.cpp  dftransform.cpp  discretegaussiangeneratorgeneric.cpp  distributiongenerator.cpp  hermite.cpp  matrix.cpp  nbtheory2.cpp
src/core/lib/utils/: hashutil.cpp  memory.cpp  openfhebase64.cpp  parallel.cpp  utilities.cpp
src/core/lib/utils/blockAllocator/: blockAllocator.cpp  xallocator.cpp
src/core/lib/utils/prng/: blake2engine.cpp
src/core/unittest/: UnitTest128.cpp  UnitTestBinInt.cpp  UnitTestBinVect.cpp  UnitTestBlockAllocate.cpp  UnitTestCommonElements.cpp  UnitTestDCRTElements.cpp  UnitTestDistrGen.cpp  UnitTestException.cpp  UnitTestFHE.cpp  UnitTestField2n.cpp  UnitTestGPUTFHE.cpp  UnitTestLatticeParams.cpp  UnitTestMLX.cpp  UnitTestMatrix.cpp  UnitTestMubintvec.cpp  UnitTestNTT.cpp  UnitTestNbTheory.cpp  UnitTestPolyElements.cpp  UnitTestSTLBlockAllocate.cpp  UnitTestSerialize.cpp  UnitTestTransform.cpp  UnitTestTrapdoor.cpp  UnitTestUtils.cpp  UnitTestXallocate.cpp
(+440 files in other folders)
